--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ h2 {
 header, main, footer {
     margin: 1.26rem auto;
     padding: .5rem;
-    max-width: auto;
+    max-width: 100%;
 }
 header, footer, footer a {
     text-align: center;
