--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,12 @@ h1 {
 h2 {
     font-size: 1.0rem;
     text-align: center;
-    border-bottom: 200px solid #bbb;
+    border-bottom: 1px solid #bbb;
 }
 header, main, footer {
-    margin: 1.26rem auto;
+    margin: 1.25rem auto;
     padding: .5rem;
-    max-width: 100%;
+    max-width: 500px;
 }
 header, footer, footer a {
     text-align: center;
