--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -1,5 +1,35 @@
 * { margin: 0; box-sizing: border-box; }
 
-header {
-background-color: blueviolet
+body {
+    font-size: 16px;
+    line-height: 32px;
+    font-family: sans-serif;
+    color: black;
+}
+h1 {
+    font-size: 2.0rem;
+    color: midnightblue;
+}
+h2 {
+    font-size: 1.0rem;
+    text-align: center;
+    border-bottom: 1px solid #bbb;
+}
+header, main, footer {
+    margin: 1.25rem auto;
+    padding: .5rem;
+    max-width: 500px;
+}
+header, footer, footer a {
+    text-align: center;
+    background-color: gray;
+    color:whitesmoke
+}
+header img {
+    width:  100px;
+    height: auto;
+    float: right;
+}
+footer {
+    font-size: 8px;
 }
