--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -7,6 +7,7 @@ body {
     color: black;
 }
 h1 {
+    text-align: center;
     font-size: 2.0rem;
     color: midnightblue;
 }
@@ -32,4 +33,7 @@ header img {
 }
 footer {
     font-size: 8px;
+}
+nav {
+    text-align: center;
 }
