--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -21,7 +21,7 @@ header, main, footer {
     padding: .5rem;
     max-width: 500px;
 }
-header, footer, footer a {
+header, footer, footer a, nav, article {
     text-align: center;
     background-color: gray;
     color:whitesmoke
@@ -33,10 +33,4 @@ header img {
 }
 footer {
     font-size: 8px;
-}
-nav {
-    text-align: center;
-}
-article {
-    text-align: center;
 }
