--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -18,7 +18,7 @@ h2 {
 }
 header, main, footer, nav {
     margin: 1.25rem auto;
-    padding: .5rem;
+    padding: 0rem;
     max-width: 500px;
 }
 header, footer, footer a, nav, article {
