--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -17,7 +17,7 @@ h2 {
     border-bottom: 1px solid #bbb;
 }
 header, main, footer, nav {
-    margin: .5rem auto;
+    margin: 1.25rem auto;
     padding: 0rem;
     max-width: 500px;
 }
