--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -2,7 +2,7 @@
 
 body {
     font-size: 16px;
-    line-height: 5px;
+    line-height: 32px;
     font-family: sans-serif;
     color: black;
 }
@@ -18,7 +18,7 @@ h2 {
 }
 header, main, footer, nav {
     margin: 1.25rem auto;
-    padding: 0rem;
+    padding: .5rem;
     max-width: 500px;
 }
 header, footer, footer a, nav, article {
