--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -47,7 +47,7 @@ background-color:rgb(12, 12, 54);
 ul {
     list-style-type: none;
 }
-.active {
+#active {
     background-color: #4CAF50;
     color: white;
 }
