--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -50,7 +50,7 @@ ul {
 #active {
     background-color: #4CAF50;
     color: white;
-    padding: 0px;
+    padding-left: 0px;
 }
 article {
     background-color:rgb(235, 228, 220);
