--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -32,7 +32,7 @@ header img {
 }
 header img, .headings {
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: left;
 	margin: 10px;
 }
 footer {
