--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -46,6 +46,18 @@ header, footer, footer a, nav {
 .headings {
     max-width: 500px;
 }
+.overlay {
+    margin: 10px auto;position: relative;
+}
+.weathersummary {
+    position: absolute;
+	top: 25px;
+	left: 50px;
+	background: rgba(6, 122, 45, 0.8);
+	border: 1px solid #000;
+	padding: 1.5rem;
+	box-shadow: 0 0 30px #fff;
+}
 footer {
     font-size: 8px;
     padding-left: 0px;
@@ -57,10 +69,11 @@ background-color: black;
 max-width: 500px;
 }
 nav {
-display: inline-block;
+display: block;
 background-color:rgb(12, 12, 54);
 position: relative;
-  align-content: center
+  align-content: center;
+  width: 100%;
 }
 button {
     background-color: #4CAF50;
@@ -69,13 +82,14 @@ button {
   font-size: 16px;
   border: none;
   cursor: pointer;
-align-content: center
+align-content: center;
+width: 500px;
 }
 ul {
     list-style-type: none;
     padding: 0px;
     display: none;
-    position: absolute;
+    
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -100,6 +114,9 @@ article {
     color: rgb(45, 33, 153);
     margin: .5rem;
     padding:.5rem;
+}
+.articlediv{
+    margin: 10px auto;position: relative;
 }
 article p {
     line-height: 20px;
