--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -1,4 +1,8 @@
 * { margin: 0; 
     box-sizing: border-box;
     font-family: 'Cabin', sans-serif;}
-    
+    @media only screen and (min-width: 32.5em){
+        ul li:first-child {display:none;}
+        ul li {display:inline-block;
+                margin-right:1rem;}
+    }
