--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -3,7 +3,7 @@
     font-family: 'Cabin', sans-serif;
 }
 img {
-    max-width: 500px;
+    max-width: 100%;
     margin: 0px;
     padding: 0px;
 }
@@ -25,7 +25,7 @@ h2 {
 header, main, footer, nav {
     margin: 0rem auto;
     padding: 0rem;
-    max-width: 500px;
+    max-width: 100%;
 }
 header, footer, footer a, nav {
     text-align: center;
@@ -44,7 +44,7 @@ header, footer, footer a, nav {
     padding: 10px;
 }
 .headings {
-    max-width: 500px;
+    max-width: 100%;
 }
 .overlay {
     margin: 10px auto;position: relative;
@@ -66,7 +66,7 @@ footer {
 }
 footer section {
 background-color: black;
-max-width: 500px;
+max-width: 100%;
 }
 nav {
 display: block;
@@ -83,7 +83,7 @@ button {
   border: none;
   cursor: pointer;
 align-content: center;
-width: 500px;
+width: 100%;
 }
 ul {
     list-style-type: none;
@@ -104,7 +104,7 @@ a {
 #active {
     background-color: #4CAF50;
     color: white;
-    max-width: 500px;
+    max-width: 100%;
 }
 nav:hover ul {
     display: block;
@@ -123,7 +123,7 @@ article p {
 }
 article img {
     box-align: center;
-    max-width: 500px;
+   
 }
 h3, #author {
     line-height: 15px;
