--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -6,7 +6,11 @@ img {
     max-width: 100%;
     margin: 0px;
     padding: 0px;
+    
+}.hero-image {
+    background-size: cover;
 }
+
 body {
     font-size: 16px;
     line-height: 32px;
@@ -128,3 +132,5 @@ article img {
 h3, #author {
     line-height: 15px;
 }
+.column h3   {display: none;}
+.column p {display: none}
