--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -1,7 +1,7 @@
 * { margin: 0; 
     box-sizing: border-box;
     font-family: 'Cabin', sans-serif;}
-    @media only screen and (min-width: 700px){
+    @media only screen and (min-width: 600px){
         ul li  {display:none;}
         ul li {display:inline-block;
                 margin-right:1rem;}
@@ -21,7 +21,8 @@
                          clear: both;
                         
                       }
-        .column h3 {display:block;
+        .column h3 {
+                display: block;
                 background-color: red;
         }  .column p {display: block;}
 
