--- a/assignments/lesson-6/CSS/large-6.css
+++ b/assignments/lesson-6/CSS/large-6.css
@@ -4,6 +4,6 @@
 
     @media only screen and (min-width: 600px) {
         .topNav li:first-child { display: none;}
-              .topNav li { display: inline-block; margin-right: 1rem;}	
-              .topNav li a { color: yellow;}
+        .topNav li { display: inline-block; margin-right: auto;}	
+        .topNav li a { color: yellow;}
 }
