--- a/assignments/lesson-8/css/tablebuild.css
+++ b/assignments/lesson-8/css/tablebuild.css
@@ -6,6 +6,7 @@ table {
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  text-align: center
 }
 th, td {
   padding: 15px;
