--- a/assignments/lesson-8/css/tablebuild.css
+++ b/assignments/lesson-8/css/tablebuild.css
@@ -1,26 +1,50 @@
+*{
+  box-sizing: border-box;
+  margin:0px;
+  font-family: 'Ubuntu', sans-serif}
+header, footer {
+  background-color:#7fb9c2;
+  text-align: center;
+}
+header, main, footer, table {
+  margin: 0rem auto;
+  padding: .5rem;
+  max-width: 400px;}
 
 
 table {
+  table-layout: auto;
+  padding: 25px;
   width:100%;
+ 
 }
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
-  text-align: center
+
 }
 th, td {
   padding: 15px;
-  text-align: left;
+  text-align: center;
 }
 table#t01 tr:nth-child(even) {
-  background-color: #eee;
+  background-color: #e7f0ed;
 }
 table#t01 tr:nth-child(odd) {
- background-color: #fff;
+ background-color: #e7ffed;
 }
-table#t01 th {
-  background-color: black;
+table#t01 th, .gmade {
+  background-color: #628ca6;
   color: white;
+}
+table#to1 {
+  font-weight: bold;
+}
+
+
+}
+.blfri {
+  font-style: italic;
 }
 
 
