--- a/assignments/lesson-8/css/tablebuild.css
+++ b/assignments/lesson-8/css/tablebuild.css
@@ -2,10 +2,7 @@
   box-sizing: border-box;
   margin:0px;
   font-family: 'Ubuntu', sans-serif}
-header, footer {
-  background-color:#7fb9c2;
-  text-align: center;
-}
+
 header, main, footer, table {
   margin: 0rem auto;
   padding: .5rem;
@@ -27,21 +24,25 @@ th, td {
   padding: 15px;
   text-align: center;
 }
-table#t01 tr:nth-child(even) {
+
+tbody#t01 tr:nth-child(even) {
   background-color: #e7f0ed;
 }
-table#t01 tr:nth-child(odd) {
+tbody#t01 tr:nth-child(odd) {
  background-color: #e7ffed;
 }
-table#t01 th, .gmade {
+tbody#t01 th, .gmade {
   background-color: #628ca6;
   color: white;
 }
-table#to1 {
+tbody#to1 {
   font-weight: bold;
 }
 
-
+thead tr td, tfoot tr td{
+  background-color:#7fb9c2;
+  text-align: center;
+}
 
 .blfri {
   font-style: italic;
