--- a/assignments/lesson-8/css/medium-8.css
+++ b/assignments/lesson-8/css/medium-8.css
@@ -6,5 +6,15 @@
         display:none;
     }
 
-   
+    form{display:grid;
+    grid-template-columns: 1fr 1fr;
+grid-gap: 5px;
+}
+    
+    .Additional{
+        grid-column:1 / 3;
+    }
+   .full{
+       width:100%;
+   }
 }
