--- a/assignments/lesson-7/CSS/medium-7.css
+++ b/assignments/lesson-7/CSS/medium-7.css
@@ -6,5 +6,13 @@
         display:none;
     }
 
+    form{display:grid;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+    }
+        
+        .Additional{
+            grid-column:1 / 3;
+        }
    
 }
