--- a/assignments/lesson-9/css/medium-8.css
+++ b/assignments/lesson-9/css/medium-8.css
@@ -14,5 +14,9 @@
         .Additional{
             grid-column:1 / 3;
         }
-   
+   .townData{
+       
+       grid-template-columns:1fr 1fr 1fr;
+       grid-gap:5px;
+   }
 }
