--- a/assignments/lesson-10/css/large-9.css
+++ b/assignments/lesson-10/css/large-9.css
@@ -8,16 +8,21 @@
         .topNav li { display: block; flex: 1 1 auto;}	
         .topNav li a { color: yellow;}
        
-        .row {column-count: 5;
+        .row {display:block;
+                column-count: 5;
                 text-align: center;
                 column-gap: 0px;
                 margin: 50px;
-        }    
+        } 
+        .column{align-content: center;}   
         .column{border:2px solid red;}
         .column h3 {display: block;
                 background-color: brown;
         }
         .column p {display: block;}
+     
+        
+        
 
 
         .grid{
