--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -60,7 +60,8 @@ header, footer, footer a, nav {
 	background: rgba(6, 122, 45, 0.8);
 	border: 1px solid #000;
 	padding: 1.5rem;
-	box-shadow: 0 0 30px #fff;
+    box-shadow: 0 0 30px #fff;
+    line-height: 1.5em;
 }
 footer {
     font-size: 8px;
