--- a/assignments/final term/css/small.css
+++ b/assignments/final term/css/small.css
@@ -1,4 +1,5 @@
 * { margin: 0; 
+    padding: 0;
     box-sizing: border-box; 
     font-family: 'Cabin', sans-serif;
 }
@@ -66,20 +67,40 @@ background-color:rgb(107, 82, 45);
 max-width: 100%;
 font-size: 14px;
 }
-nav {	margin: 0 auto;	
+nav {	margin: 0 ;	
+    padding: 0px;
     max-width: 100%; 
-    background-color: rgb(10, 117, 6);	}
+    	}
 .topNav { list-style: none; 
     text-align: center;
     display: flex;
-    flex-direction:column; }
+    flex-direction:column; 
+    background-color: rgb(10, 117, 6);
+    position: relative;
+}
+    .dropdown{
+        background-color: blue;
+        text-align: center;
+    flex-direction:column;
+    
+    }
   .topNav li:first-child { display: block;}
+  .dropdown li:first-child{display:none;}
   .topNav li { display: none;}
   .topNav a {	display: block;	
     color: white; 
-    padding: .75rem;	
+    padding: .75rem;
     text-align: center;	
     text-decoration: none;}
+    .dropdown a{
+        display:block; color: white; 
+        padding: .75rem;
+        text-align: center;	
+        text-decoration: none;}
   .topNav a:hover {	color: #000; background-color: #fff; font-weight: 700;	}
+  .topNav li:hover .dropdown li{display: block}
   #active {background-color: rgb(107, 82, 45);}
-	.responsive li { display: block; }
+    .responsive li { display: block; }
+    .dropdown li{display:none;}
+    
+   
